fix browse button link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<p>A library for all.</p>
                             <p>Trade knowledge here.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Browse</a></li>
+								<li><a href="Browse.html" class="button primary">Browse</a></li>
 							</ul>
                             
                             <ul class="actions special">
