--- a/Browse.html
+++ b/Browse.html
@@ -43,6 +43,7 @@
 					<article id="main">
 						<header>
 							<h2>Browse</h2>
+							<link rel="stylesheet" href="browser+search.css">
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
