--- a/Browse.html
+++ b/Browse.html
@@ -12,6 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" type="text/css" href="Browse.css">
 	</head>
 	<body class="is-preload">
 
@@ -43,6 +44,10 @@
 					<article id="main">
 						<header>
 							<h2>Browse</h2>
+							<div class="main">
+								<input type="text" name="Search" placeholder="Search...">
+								<button>SEARCH</button>
+							</div>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
