add contact page

--- a/Browse.html
+++ b/Browse.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-        <link rel="icon" href="images/BookFavicon.png"/>
+    <link rel="icon" href="images/BookFavicon.png"/>
 		<title>Browse - Maven</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -31,8 +31,9 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="Browse.html">Browse</a></li>
 											<li><a href="About.html">About Us</a></li>
+											<li><a href="Contact.html">Contact Us</a></li>
 											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="#">Log In</a></li>											
 										</ul>
 									</div>
 								</li>
