--- a/About.html
+++ b/About.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-        <link rel="icon" href="images/BookFavicon.png"/>
+    <link rel="icon" href="images/BookFavicon.png"/>
 		<title>About Us - Maven</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -30,7 +30,8 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="Browse.html">Browse</a></li>
 											<li><a href="About.html">About Us</a></li>
-                                            <li><a href="login.html">Log In</a></li>
+											<li><a href="Contact.html">Contact Us</a></li>
+                      <li><a href="login.html">Log In</a></li>
 											<li><a href="#">Sign Up</a></li>
 										</ul>
 									</div>
