--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-        <link rel="icon" href="images/BookFavicon.png"/>
+    <link rel="icon" href="images/BookFavicon.png"/>
 		<title>Maven</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -30,8 +30,9 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="Browse.html">Browse</a></li>
 											<li><a href="About.html">About Us</a></li>
+											<li><a href="Contact.html">Contact Us</a></li>
 											<li><a href="login.html">Log In</a></li>
-                                            <li><a href="#">Sign Up</a></li>
+                      <li><a href="#">Sign Up</a></li>
 										</ul>
 									</div>
 								</li>
@@ -48,8 +49,7 @@
 							<ul class="actions special">
 								<li><a href="Browse.html" class="button primary">Browse</a></li>
 							</ul>
-                            
-                            <ul class="actions special">
+              <ul class="actions special">
 								<li><a href="login.html" class="button primary">Log In</a></li>
 							</ul>
 						</div>
