--- a/Browse.html
+++ b/Browse.html
@@ -58,64 +58,49 @@
 								</header>
 
 								<!-- Multiple Item Carousel -->
-								<div id="demo" class="carousel slide" data-interval="false">
-
-									<!-- Indicators -->
-									<ul class="carousel-indicators">
-										<li data-target="#demo" data-slide-to="0" class="active"></li>
-										<li data-target="#demo" data-slide-to="1"></li>
-										<li data-target="#demo" data-slide-to="2"></li>
-									</ul>
+								<div id="demo" class="carousel slide item-center" data-interval="false" >
 									
 									<!-- The slideshow -->
 									<div class="container carousel-inner no-padding image-size">
 										<div class="carousel-item active">
 											<div class="col-xs-3 col-sm-3 col-md-3">
-												<div>
+												<div class="icon-container">
 													<img src="./images/icons/paint-palette.png">
 													<p>Art</p>
 												</div>
 											</div>    
 											<div class="col-xs-3 col-sm-3 col-md-3">
-												<div>
+												<div class="icon-container">
 													<img src="./images/icons/chemistry.png">
 													<p>Science</p>
 												</div>
 											</div>   
 											<div class="col-xs-3 col-sm-3 col-md-3">
-												<div>
+												<div class="icon-container">
 													<img src="./images/icons/history.png">
 													<p>History</p>
 												</div>
-											</div>   
+											</div>
 										</div>
 										<div class="carousel-item">
 											<div class="col-xs-3 col-sm-3 col-md-3">
-												<img src="https://image.shutterstock.com/z/stock-photo-sleeping-disorders-as-a-reason-for-insomnia-293777093.jpg">
+												<div class="icon-container">
+													<img src="./images/icons/education.png">
+													<p>Textbooks</p>
+												</div>
 											</div>    
 											<div class="col-xs-3 col-sm-3 col-md-3">
-												<img src="https://image.shutterstock.com/z/stock-photo-sleeping-disorders-as-a-reason-for-insomnia-293777093.jpg">
+												<div class="icon-container">
+													<img src="./images/icons/pill.png">
+													<p>Medicine</p>
+												</div>
 											</div>   
 											<div class="col-xs-3 col-sm-3 col-md-3">
-												<img src="https://image.shutterstock.com/z/stock-photo-sleeping-disorders-as-a-reason-for-insomnia-293777093.jpg">
-											</div>   
-											<div class="col-xs-3 col-sm-3 col-md-3">
-												<img src="https://image.shutterstock.com/z/stock-photo-sleeping-disorders-as-a-reason-for-insomnia-293777093.jpg">
-											</div>  
-										</div>
-										<div class="carousel-item">
-											<div class="col-xs-3 col-sm-3 col-md-3">
-												<img src="https://image.shutterstock.com/z/stock-photo-sleeping-disorders-as-a-reason-for-insomnia-293777093.jpg">
-											</div>    
-											<div class="col-xs-3 col-sm-3 col-md-3">
-												<img src="https://image.shutterstock.com/z/stock-photo-sleeping-disorders-as-a-reason-for-insomnia-293777093.jpg">
-											</div>   
-											<div class="col-xs-3 col-sm-3 col-md-3">
-												<img src="https://image.shutterstock.com/z/stock-photo-sleeping-disorders-as-a-reason-for-insomnia-293777093.jpg">
-											</div>   
-											<div class="col-xs-3 col-sm-3 col-md-3">
-												<img src="https://image.shutterstock.com/z/stock-photo-sleeping-disorders-as-a-reason-for-insomnia-293777093.jpg">
-											</div>  
+												<div class="icon-container">
+													<img src="./images/icons/rose.png">
+													<p>Romance</p>
+												</div>
+											</div>
 										</div>
 									</div>
 									
