--- a/login.html
+++ b/login.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-<meta name="google-signin-client_id" content="107577167980-4voh0ckavrhmb8g5c8m7sv3rokaua4s2.apps.googleusercontent.com">
 <link rel="stylesheet" href="login.css">
+<script src="login.js"></script>
 <head>
     <link rel="icon" href="images/BookFavicon.png"/>
     <title>Browse - Maven</title>
@@ -16,7 +16,7 @@
         <form>
             <span class="text-center">Login</span>
         <div class="input-container">
-            <input id="password" type="text" required=""/>
+            <input id="username" type="text" required=""/>
             <label>Username</label>		
         </div>
         <div class="input-container">		
@@ -25,9 +25,8 @@
         </div>
         <a href="register.html" id="signup">Don't have an account? Sign up!</a>
         <br>
-        <button type="button" class="btn">submit</button>
+        <button type="button" class="btn" onclick="onLogin()">submit</button>
     </form>	
     </div>
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
 </body>
 </html>
