--- a/Browse.html
+++ b/Browse.html
@@ -33,8 +33,8 @@
 											<li><a href="Browse.html">Browse</a></li>
 											<li><a href="About.html">About Us</a></li>
 											<li><a href="Contact.html">Contact Us</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>											
+											<li><a href="register.html">Sign Up</a></li>
+											<li><a href="login.html">Log In</a></li>											
 										</ul>
 									</div>
 								</li>
