--- a/index.html
+++ b/index.html
@@ -1,81 +1,82 @@
 <!DOCTYPE HTML>
 <!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Spectral by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
+    <head>
     <link rel="icon" href="images/BookFavicon.png"/>
-		<title>Maven</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="landing is-preload">
+        <title>Maven</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    </head>
+    <body class="landing is-preload">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+        <!-- Page Wrapper -->
+            <div id="page-wrapper">
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Maven</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Navigate</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="Browse.html">Browse</a></li>
-											<li><a href="About.html">About Us</a></li>
-											<li><a href="Contact.html">Contact Us</a></li>
-											<li><a href="login.html">Log In</a></li>
-                      						<li><a href="register.html">Sign Up</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
+                <!-- Header -->
+                    <header id="header" class="alt">
+                        <h1><a href="index.html">Maven</a></h1>
+                        <nav id="nav">
+                            <ul>
+                                <li class="special">
+                                    <a href="#menu" class="menuToggle"><span>Navigate</span></a>
+                                    <div id="menu">
+                                        <ul>
+                                            <li><a href="index.html">Home</a></li>
+                                            <li><a href="Browse.html">Browse</a></li>
+                                            <li><a href="add-books.html">Add a Book</a></li>
+                                            <li><a href="About.html">About Us</a></li>
+                                            <li><a href="Contact.html">Contact Us</a></li>
+                                            <li><a href="login.html">Log In</a></li>
+                                            <li><a href="register.html">Sign Up</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </nav>
+                    </header>
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Maven</h2>
-							<p>A library for all.</p>
+                <!-- Banner -->
+                    <section id="banner">
+                        <div class="inner">
+                            <h2>Maven</h2>
+                            <p>A library for all.</p>
                             <p>Trade knowledge here.</p>
-							<ul class="actions special">
-								<li><a href="Browse.html" class="button primary">Browse</a></li>
-							</ul>
+                            <ul class="actions special">
+                                <li><a href="Browse.html" class="button primary">Browse</a></li>
+                            </ul>
               <ul class="actions special">
-								<li><a href="login.html" class="button primary">Log In</a></li>
-							</ul>
-						</div>
-					</section>
+                                <li><a href="login.html" class="button primary">Log In</a></li>
+                            </ul>
+                        </div>
+                    </section>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://github.com/CSCI-40500-77100-Spring-2021/project-6" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Maven</li>
-						</ul>
-					</footer>
+                <!-- Footer -->
+                    <footer id="footer">
+                        <ul class="icons">
+                            <li><a href="https://github.com/CSCI-40500-77100-Spring-2021/project-6" class="icon brands fa-github"><span class="label">Github</span></a></li>
+                            <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+                        </ul>
+                        <ul class="copyright">
+                            <li>&copy; Maven</li>
+                        </ul>
+                    </footer>
 
-			</div>
+            </div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+        <!-- Scripts -->
+            <script src="assets/js/jquery.min.js"></script>
+            <script src="assets/js/jquery.scrollex.min.js"></script>
+            <script src="assets/js/jquery.scrolly.min.js"></script>
+            <script src="assets/js/browser.min.js"></script>
+            <script src="assets/js/breakpoints.min.js"></script>
+            <script src="assets/js/util.js"></script>
+            <script src="assets/js/main.js"></script>
 
-	</body>
+    </body>
 </html>
