--- a/Browse.html
+++ b/Browse.html
@@ -24,7 +24,7 @@
                 <!-- Header -->
                     <header id="header">
                         <h1><a href="index.html">Maven</a></h1>
-                        <p id="login-success" style="color: green; display: flex; justify-content: flex-end; margin-right: 20%;" >Login to rent and buy books!</p>
+                        <p id="login-success">Login to rent and buy books!</p>
                         <nav id="nav">
                             <ul>
                                 <li class="special">
