--- a/Browse.html
+++ b/Browse.html
@@ -24,6 +24,7 @@
                 <!-- Header -->
                     <header id="header">
                         <h1><a href="index.html">Maven</a></h1>
+                        <!-- Default when not signed in, replaced when a user logs in-->
                         <p id="login-success">Login to rent and buy books!</p>
                         <nav id="nav">
                             <ul>
