--- a/Browse.html
+++ b/Browse.html
@@ -33,7 +33,8 @@
 											<li><a href="About.html">About Us</a></li>
 											<li><a href="Contact.html">Contact Us</a></li>
 											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>											
+											<li><a href="#">Log In</a></li>
+											<li><a href="#" onclick="send()">test</a></li>											
 										</ul>
 									</div>
 								</li>
