allow posting of books and displaying books from database

--- a/Browse.html
+++ b/Browse.html
@@ -136,19 +136,32 @@
                                 <section>
                                     <h2>Available Books for Rent</h2>
                                     <div class="table-wrapper">
-                                        <table class="alt">
+                                        <table class="alt" style="width: 100%">
+                                            <colgroup>
+                                                <col style="width: 10%;">
+                                                <col style="width: 10%;">
+                                                <col style="width: 10%;">
+                                                <col style="width: 10%;">
+                                                <col style="width: 50%;">
+                                                <col style="width: 10%;">
+                                            </colgroup>
+
                                             <thead>
                                                 <tr>
+                                                    <th>ISBN</th>
                                                     <th>Book Name</th>
                                                     <th>Author</th>
+                                                    <th>Genre</th>
                                                     <th>Description</th>
                                                     <th>Price</th>
                                                 </tr>
                                             </thead>
-                                            <tbody>
+                                            <tbody id="books-list">
                                                 <tr>
+                                                    <td>100</td>
                                                     <td>Software Engineering</td>
                                                     <td>Ian Somerville</td>
+                                                    <td>Computer Science</td>
                                                     <td>Software Engineering introduces readers to the overwhelmingly important subject of software programming and development. In the past few years, computer systems have come to dominate not just our technological growth, but the foundations of our world’s major industries. This text seeks to lay out the fundamental concepts of this huge and continually growing subject area in a clear and comprehensive manner.</td>
                                                     <td>
                                                         39.99
@@ -156,8 +169,10 @@
                                                     </td>		
                                                 </tr>
                                                 <tr>
+                                                    <td>101</td>
                                                     <td>The Principles of Psychology</td>
                                                     <td>William James</td>
+                                                    <td>Psychology</td>
                                                     <td>The Principles of Psychology is an 1890 book about psychology by William James, an American philosopher and psychologist who trained to be a physician before going into psychology. There are four methods from James' book: stream of consciousness (James' most famous psychological metaphor); emotion (later known as the James–Lange theory); habit (human habits are constantly formed to achieve certain results); and will (through James' personal experiences in life).</td>
                                                     <td>
                                                         19.99
@@ -165,8 +180,10 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td>102</td>
                                                     <td>Introduction to Quantum Mechanics</td>
                                                     <td>David J. Griffiths & Darrell F. Schroeter</td>
+                                                    <td>Physics</td>
                                                     <td>This book first teaches learners how to do quantum mechanics, and then provides them with a more insightful discussion of what it means. Fundamental principles are covered, quantum theory presented, and special techniques developed for attacking realistic problems. The book's two-part coverage organizes topics under basic theory, and assembles an arsenal of approximation schemes with illustrative applications. For physicists and engineers.</td>
                                                     <td>
                                                         25.99
@@ -174,8 +191,10 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td>103</td>
                                                     <td>A Concise Introduction to Logic</td>
                                                     <td>Patrick J. Hurley</td>
+                                                    <td>Philosophy</td>
                                                     <td>Unsurpassed for its clarity and comprehensiveness, Hurley's A Concise Introduction to Logic is the #1 introductory logic textbook in the market. In this Eleventh Edition, Hurley continues to build upon the tradition of a lucid, focused, and accessible presentation of the basic subject matter of logic, both formal and informal. Hurley's extensive, carefully sequenced collection of exercises continue to guide students toward greater proficiency with the skills they are learning.</td>
                                                     <td>
                                                         22.99
@@ -183,8 +202,10 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td>104</td>
                                                     <td>Contemporary Linguistics</td>
                                                     <td>William O'Grady</td>
+                                                    <td>Linguistics</td>
                                                     <td>Contemporary Linguistics is one of the most comprehensive introduction to the fundamentals of linguistics, balancing engaging aspects of language study with solid coverage of the basics. Up-to-date scholarship, a direct approach, and a lucid writing style makes it appealing to instructors and beginning students alike and a resource that many students continue to use beyond the classroom.</td>
                                                     <td>
                                                         35.99
@@ -192,8 +213,10 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td>105</td>
                                                     <td>Principles of Economics</td>
                                                     <td>N. Gregory Mankiw</td>
+                                                    <td>Economics</td>
                                                     <td>Now you can master the principles of economics with the help of the most popular, widely-used economics textbook by students worldwide -- Mankiw’s PRINCIPLES OF ECONOMICS, 8E. With its clear and engaging writing style, this book emphasizes only the material that will help you better understand the world in which you live, will make you a more astute participant in the economy, and will give you a better understanding of both the potential and limits of economic policy.</td>
                                                     <td>
                                                         33.99
@@ -201,8 +224,10 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td>106</td>
                                                     <td>Linear Algebra and Its Applications</td>
                                                     <td>David Lay</td>
+                                                    <td>Mathematics</td>
                                                     <td>With traditional linear algebra texts, the course is relatively easy for students during the early stages as material is presented in a familiar, concrete setting. However, when abstract concepts are introduced, students often hit a wall. Instructors seem to agree that certain concepts (such as linear independence, spanning, subspace, vector space, and linear transformations) are not easily understood and require time to assimilate. These concepts are fundamental to the study of linear algebra, so students' understanding of them is vital to mastering the subject. This text makes these concepts more accessible by introducing them early in a familiar, concrete Rn setting, developing them gradually, and returning to them throughout the text so that when they are discussed in the abstract, students are readily able to understand.</td>
                                                     <td>
                                                         27.99
@@ -210,8 +235,10 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td>107</td>
                                                     <td>Campbell Biology</td>
                                                     <td>Lisa Urry</td>
+                                                    <td>Biology</td>
                                                     <td>The Eleventh Edition of the best-selling Campbell BIOLOGY sets students on the path to success in biology through its clear and engaging narrative, superior skills instruction, innovative use of art and photos, and fully integrated media resources to enhance teaching and learning.</td>
                                                     <td>
                                                         17.99
@@ -219,8 +246,10 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td>108</td>
                                                     <td>Organic Chemistry as a Second Language</td>
                                                     <td>David R. Klein</td>
+                                                    <td>Chemistry</td>
                                                     <td>Organic chemistry can be a challenging subject. Most students view organic chemistry as a subject requiring hours upon hours of memorization. Author David Klein's Second Language books prove this is not true―organic chemistry is one continuous story that actually makes sense if you pay attention. Offering a unique skill-building approach, these market-leading books teach students how to ask the right questions to solve problems, study more efficiently to avoid wasting time, and learn to speak the language of organic chemistry.</td>
                                                     <td>
                                                         19.99
